ajustes swagger
